--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 
 001 ==> 338037 - digiKam 4.2.0 compilation error: undefined reference to `cvFillImage'.
 002 ==> 335250 - Proposed minor fixes to MediaWiki plugin [patch].
-003 ==> 
+003 ==> 338871 - Selection of KIPI plugins is set to default after each restart of digiKam.
+004 ==> 
