--- a/NEWS
+++ b/NEWS
@@ -11,3 +11,4 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 001 ==> 338037 - digiKam 4.2.0 compilation error: undefined reference to `cvFillImage'.
 002 ==> 335250 - Proposed minor fixes to MediaWiki plugin [patch].
 003 ==> 338871 - Selection of KIPI plugins is set to default after each restart of digiKam.
+004 ==> 336667 - "Google Drive Export" ignoring digikamrc setting.
