--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,6 @@ Kipi-plugins 4.4.0 - Release date: 2014/10/12
 
 NEW FEATURES:
 
-BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
+BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 
