--- a/NEWS
+++ b/NEWS
@@ -6,4 +6,5 @@ NEW FEATURES:
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 302306 - HTML export crashes digiKam with floating cards theme.
-002 ==> 
+002 ==> 341379 - Advanced slideshow crashes if it runs manually backwards [patch].
+003 ==> 
