--- a/NEWS
+++ b/NEWS
@@ -6,4 +6,5 @@ NEW FEATURES:
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 342194 - Geolocalisation not possible using google maps: "Malformated Url"
-002 ==> 
+002 ==> 343777 - FindQtSoap.cmake doesn't find latest qtsoap built from git code [patch].
+003 ==> 
