--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Kipi-plugins 5.0.0 - Release date: 2015/06/01
+Kipi-plugins 5.0.0-beta1 - Release date: 2015/06/01
 ------------------------------------------------------------------------
 
 NEW FEATURES:
