--- a/NEWS
+++ b/NEWS
@@ -5,4 +5,5 @@ NEW FEATURES:
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
-001 ==> 
+001 ==> 310977 - Applying data (exif, iptc, xmp caption) in "Edit all Metadata" window inconsistent - results in data loss.
+002 ==> 
