--- a/NEWS
+++ b/NEWS
@@ -7,4 +7,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 310977 - Applying data (exif, iptc, xmp caption) in "Edit all Metadata" window inconsistent - results in data loss.
 002 ==> 340330 - Deselecting "Show tracks on map" crashes the dialog.
-003 ==> 
+003 ==> 283504 - QJSon not optional.
+004 ==> 
