--- a/NEWS
+++ b/NEWS
@@ -5,4 +5,6 @@ NEW FEATURES:
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
-001 ==>
+001 ==> 280189 - SmugMug Call Failed: Invalid user/nick/password.
+002 ==> 334593 - Kipiplugins fails with invalid method reading folders from Smug Mug.
+003 ==> 
