--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,8 @@
-Kipi-plugins 4.10.0 - Release date: 2015/05/10
+Kipi-plugins 4.11.0 - Release date: 2015-06-14
 ------------------------------------------------------------------------
 
 NEW FEATURES:
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
-001 ==> 280189 - SmugMug Call Failed: Invalid user/nick/password.
-002 ==> 334593 - Kipiplugins fails with invalid method reading folders from Smug Mug.
-003 ==> 
+001 ==> 
