--- a/NEWS
+++ b/NEWS
@@ -9,4 +9,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 002 ==> 345358 - digiKam crash when vkontakte plugin failed to upload images.
 003 ==> 320308 - "Failed to upload photo into Flickr" every time after first use.
 004 ==> 327069 - Kipiplugins missing translations.
-005 ==> 
+005 ==> 243106 - Flickr uploader uploads with wrong date.
+006 ==> 
