--- a/NEWS
+++ b/NEWS
@@ -13,4 +13,6 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 006 ==> 291449 - To check the file size and report to the user if the file size exceeds limits set by flickr.
 007 ==> 228010 - Let flickr export progress bar show progress of each image.
 008 ==> 240147 - Allow to change Advanced Slideshow delay with mouse as with keyboard.
-009 ==> 
+009 ==> 261862 - Advanced slideshow controls not visible during a slideshow.
+010 ==> 
+
