--- a/NEWS
+++ b/NEWS
@@ -16,4 +16,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 009 ==> 261862 - Advanced slideshow controls not visible during a slideshow.
 010 ==> 134525 - Impossible to use both transitions in slideshow.
 011 ==> 182345 - Missing slideshow effects with control by hand.
-012 ==> 
+012 ==> 238601 - Slideshow should support reordering pictures.
+013 ==> 
