--- a/NEWS
+++ b/NEWS
@@ -18,4 +18,6 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 011 ==> 182345 - Missing slideshow effects with control by hand.
 012 ==> 238601 - Slideshow should support reordering pictures.
 013 ==> 144007 - Allow to drag and drop location link over map.
-014 ==> 
+014 ==> 280215 - Can't add geolocation info to videos.
+015 ==> 
+
