--- a/NEWS
+++ b/NEWS
@@ -22,4 +22,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 015 ==> 210458 - Allow to use NMEA format as imported track file.
 016 ==> 273520 - Geolocation not working reliably.
 017 ==> 319657 - Unable to save geotags in *.CR2 and *.DNG.
-018 ==> 
+018 ==> 304760 - OpenStreetMap shows only tiles from cache and does not download missing ones.
+019 ==> 
