--- a/NEWS
+++ b/NEWS
@@ -24,4 +24,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 017 ==> 319657 - Unable to save geotags in *.CR2 and *.DNG.
 018 ==> 304760 - OpenStreetMap shows only tiles from cache and does not download missing ones.
 019 ==> 328943 - Description EXIF information.
-020 ==> 
+020 ==> 274869 - Images without filename extension will not print.
+021 ==> 
