--- a/NEWS
+++ b/NEWS
@@ -26,4 +26,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 019 ==> 328943 - Description EXIF information.
 020 ==> 274869 - Images without filename extension will not print.
 021 ==> 215705 - Save multiple account frobs, so we don't have to sign out and reauth each time.
-022 ==> 
+022 ==> 193890 - Allow to update "Modified" date from image.
+023 ==> 
