--- a/NEWS
+++ b/NEWS
@@ -28,4 +28,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 021 ==> 215705 - Save multiple account frobs, so we don't have to sign out and reauth each time.
 022 ==> 193890 - Allow to update "Modified" date from image.
 023 ==> 318661 - Export plugin does not convert to sRGB and strips existing ICC profile.
-024 ==> 
+024 ==> 233675 - Shared binary programs dngconverter and scangui do not provide man pages.
+025 ==> 
