--- a/NEWS
+++ b/NEWS
@@ -29,4 +29,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 022 ==> 193890 - Allow to update "Modified" date from image.
 023 ==> 318661 - Export plugin does not convert to sRGB and strips existing ICC profile.
 024 ==> 233675 - Shared binary programs dngconverter and scangui do not provide man pages.
-025 ==> 
+025 ==> 316310 - Tools - resize images doesn' work.
+026 ==> 
