--- a/NEWS
+++ b/NEWS
@@ -30,4 +30,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 023 ==> 318661 - Export plugin does not convert to sRGB and strips existing ICC profile.
 024 ==> 233675 - Shared binary programs dngconverter and scangui do not provide man pages.
 025 ==> 316310 - Tools - resize images doesn' work.
-026 ==> 
+026 ==> 300458 - Imgur export is unusable from ksnapshot.
+027 ==> 
