--- a/NEWS
+++ b/NEWS
@@ -35,4 +35,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 028 ==> 264351 - KDE Global shortcuts do not work when using Advanced Slideshow.
 029 ==> 227978 - Problem with "image resize" when german umlaute in pathname.
 030 ==> 154076 - Corrupted image when use image viewer tool.
-031 ==> 
+031 ==> 264045 - Export to remote computer does not work with fish:// urls.
+032 ==> 
