--- a/NEWS
+++ b/NEWS
@@ -37,4 +37,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 030 ==> 154076 - Corrupted image when use image viewer tool.
 031 ==> 264045 - Export to remote computer does not work with fish:// urls.
 032 ==> 160893 - Use UPNP server as image database.
-033 ==> 
+033 ==> 340847 - MediaWiki: {{Coord}} template does not exist on Commons.
+034 ==> 
