--- a/NEWS
+++ b/NEWS
@@ -41,4 +41,6 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 034 ==> 335493 - Fix issues when metadata are loaded by MediaWiki tool [patch].
 035 ==> 300629 - Print Assistant does not follow system localization.
 036 ==> 303167 - DNGConverter fails if folder of raw files contains special characters like german umlauts.
-037 ==> 
+037 ==> 122284 - Using mouse button to switch between next/previous item do not work with all effects.
+038 ==> 
+
