--- a/NEWS
+++ b/NEWS
@@ -45,4 +45,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 038 ==> 317920 - Time zone data of IPTC metadata Date Created is unavailable and deleted in MetadataEdit [patch].
 039 ==> 342687 - Panorama file time-stamps should be the same than the stitched pictures.
 040 ==> 311689 - Reverse Geocoding tags are sometimes not saved.
-041 ==> 
+041 ==> 292482 - FACTORING : permit to fill image list with current selected album when no item are selected [patch].
+042 ==> 
