--- a/NEWS
+++ b/NEWS
@@ -46,4 +46,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 039 ==> 342687 - Panorama file time-stamps should be the same than the stitched pictures.
 040 ==> 311689 - Reverse Geocoding tags are sometimes not saved.
 041 ==> 292482 - FACTORING : permit to fill image list with current selected album when no item are selected [patch].
-042 ==> 
+042 ==> 348278 - Export to GDrive fails when photo description contains double quotes.
+043 ==> 
