--- a/NEWS
+++ b/NEWS
@@ -5,4 +5,5 @@ NEW FEATURES:
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
-001 ==>
+001 ==> 321446 - Export to Imgur just hang on 'loading' animation eternally.
+002 ==> 
