--- a/NEWS
+++ b/NEWS
@@ -6,4 +6,5 @@ NEW FEATURES:
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 321446 - Export to Imgur just hang on 'loading' animation eternally.
-002 ==> 
+002 ==> 349208 - Cmake can't find external libkvkontakte.
+003 ==> 
