NEWS file update.

--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,18 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 003 ==> 277898 - Does not compile, presumably because of missing directory in include path.
 004 ==> 315580 - digiKam crashed after I changed the DLNA implementation from "HUPnP API" to "miniDLNA".
 005 ==> 316126 - digiKam crashed when choosing dlna export.
-006 ==> 
+006 ==> 348519 - Auth Token 98 - Login failed - Picasa Import.
+007 ==> 215787 - picasaweb updating photo or movie does not work,duplicate instead of replace.
+008 ==> 217546 - picasaweb export does not point to the current album.
+009 ==> 223375 - PicasaWeb: videos won't be exported.
+010 ==> 272423 - [wish] picasaweb updating tags.
+011 ==> 272518 - picasaweb updating photo not marked as uploaded.
+012 ==> 329350 - Exporting a second time mix two exports (test picasaweb).
+013 ==> 219773 - Attempted to use Picasaweb addon to upload an album of approximately 330 jpegs.
+014 ==> 221200 - Uploading photo to picasa web albums.
+015 ==> 221417 - Crash while export to Picasaweb.
+016 ==> 291701 - PicasaWeb Export removes deleted photos from album.
+017 ==> 304763 - Export of Picasaweb crashes Gwenview.
+018 ==> 306165 - Crash while starting photo upload to picasa.
+019 ==> 308701 - digikam crash while export again the same image to picasaweb with kipi plugin.
+020 ==> 321251 - Gwenview crashs if close it while sending images to picasa.
