Updating NEWS file.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ Kipi-plugins 4.12.0 - Release date: 2015-07-26
 
 NEW FEATURES:
 
+001 ==> Implementations of PicasaWeb and Google Drive are now merged into one common Google Services tool. 
+
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 321446 - Export to Imgur just hang on 'loading' animation eternally.
