--- a/NEWS
+++ b/NEWS
@@ -32,4 +32,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 023 ==> 200091 - "remove EXIF data" crashes digikam, gwenview.
 024 ==> 265630 - Gallery export uploads to wrong directory.
 025 ==> 249842 - Blend bracketed images tool says it failed to save the blended image, but actually saves it.
-026 ==> 
+026 ==> 320749 - Panorama tool fails systematically when file names contain ':'.
+027 ==> 
