--- a/README
+++ b/README
@@ -48,7 +48,7 @@ MediaWiki          : A tool to export images to Mediawiki based web service (htt
 RajceExport        : A tool to export images to Rajce web service (http://www.rajce.idnes.cz).
 Vkontakte          : A tool to export images to VKontakte web service (http://www.vkontakte.ru)
 PhotoLayoutEditor  : A tool to assemble images together.
-ImageShackExport   : A tool to export images to ImageShack web service (http://imageshack.us)
+ImageShack         : A tool to export images to ImageShack web service (http://imageshack.us)
 ImgurExport        : A tool to export images to ImgUr web service (http://imgur.com)
 DLNAExport         : A tool to export collection on DLNA network service (http://www.dlna.org).
 Panorama           : A tool to assemble panoramic photo automatically.
