--- a/README
+++ b/README
@@ -24,18 +24,15 @@ GalleryExport      : A tool to export images to a remote Gallery (and Gallery 2)
 GPSSync            : A tool to geolocalize pictures.
 HTMLExport         : A tool to export images collections into a static XHTML page.
 ImageViewer        : A tool to preview images using OpenGL.
-JpegLossLess       : A tool to rotate/flip images without losing quality.
 MetadataEdit       : A tool to edit EXIF, IPTC and XMP metadata.
 GoogleServices     : A tool to export images to Google web services.
 PrintImage         : A tool to print images in various format.
-RawConverter       : A tool to convert Raw Image to JPEG/PNG/TIFF.
 RemoveRedEyes      : A tool to remove red eyes on image automatically.
 SendImages         : A tool to send images by e-mail.
 SimpleViewerExport : A tool to export images to Flash using SimpleViewer (http://www.airtightinteractive.com/simpleviewer).
 SlideShow          : A tool to Slide images with 2D and 3D effects using OpenGL.
 Smug               : A tool to import/export images to/from a remote SmugMug web service (http://www.smugmug.com).
 TimeAdjust         : A tool to adjust date and time.
-BatchProcess       : A tool to batch process images (convert, resize, rename, etc.).
 KIOExport          : A tool to export images to remote computer using network protocol (FTP, SSH, SAMBA, etc...).
 Shwup              : A tool to export images to Shwup web service (http://www.shwup.com).
 ExpoBlending       : A tool to create pseudo HDR image with a stack of bracketed images.
@@ -55,16 +52,15 @@ WallPaper          : A tool to set image as background on your desktop.
 
 -- DEPENDENCIES -------------------------------------------------------
 
-CMake           >= 2.4.5                        http://www.cmake.org
-libqt           >= 4.3.0                        http://www.qtsoftware.com
-libkde          >= 4.3.0                        http://www.kde.org
+CMake           >= 3.0.0                        http://www.cmake.org
+libqt           >= 5.5.0                        http://www.qtsoftware.com
+libkde          >= 5.5.0                        http://www.kde.org
 libtiff         >= 3.8.2                        http://www.remotesensing.org/libtiff
 libjpeg         >= 6b                           http://www.ijg.org
 libpng          >= 1.2.0                        http://www.libpng.org/pub/png/libpng.html
-libkipi         >= 2.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkipi
-libkexiv2       >= 2.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkexiv2
-libkdcraw       >= 2.2.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkdcraw
-ImageMagick     >= 5.5.4 (runtime dependency)   http://www.imagemagick.org
+libkipi         >= 5.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkipi
+libkexiv2       >= 5.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkexiv2
+libkdcraw       >= 5.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkdcraw
 Hugin           >= 0.8.0 (runtime dependency)   http://hugin.sourceforge.net
 Enblend         >= 3.0.0 (runtime dependency)   http://enblend.sourceforge.net
 
@@ -83,9 +79,9 @@ libgdk          >= 2.0.0                        http://library.gnome.org/devel/g
 libqca          >= 2.0.0                        http://delta.affinix.com/qca
 libqjson        >= 0.6.0                        http://qjson.sourceforge.net
 libksane        >= 0.3.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libksane
-libkgeomap      >= 3.0.0                        https://projects.kde.org/projects/extragear/libs/libkgeomap
-libmediawiki    >= 1.0.0                        https://projects.kde.org/projects/extragear/libs/libmediawiki
-libkvkontakte   >= 0.1.0                        https://projects.kde.org/projects/extragear/libs/libkvkontakte
+libkgeomap      >= 5.0.0                        https://projects.kde.org/projects/extragear/libs/libkgeomap
+libmediawiki    >= 5.0.0                        https://projects.kde.org/projects/extragear/libs/libmediawiki
+libkvkontakte   >= 4.70.0                       https://projects.kde.org/projects/extragear/libs/libkvkontakte
 libimagemagick  >= 5.5.4                        http://www.imagemagick.org
 libqtgstreamer  >= 0.9.0                        http://gstreamer.freedesktop.org/modules/qt-gstreamer.html
 libhupnp        >= 2.0.0                        http://www.herqq.org                                               If no external libray is found, internal version is used instead.
@@ -101,8 +97,6 @@ ImageViewer        : X11 (Linux Only), Mesa3D, and OpenGL support for libqt
 DngConverter       : libexpat.
 AcquireImages      : libksane.
 HtmlExport         : libxslt and libxml2.
-JpegLossless       : imagemagick (runtime dependency).
-WallPaper          : kdebase (runtime dependency).
 RemoveRedEyes      : libopencv.
 Calendar           : libkdepimlibs.
 Shwup              : libqca.
@@ -115,8 +109,7 @@ Mediawiki          : libmediawiki.
 Vkontakte          : libkvkontakte.
 DLNAExport         : libhupnp and libqtsoap.
 VideoSlideshow     : libimagemagick and libqtgstreamer
-Imgur              : libqtkoauth.
-ImgurExport        : kqoauth for Imgur.com's authenticated API.
+Imgur              : libqtkoauth and kqoauth for Imgur.com's authenticated API.
 Panorama           : Hugin command line tools, flex, bison (runtime dependency).
 
 -- CONTACT ------------------------------------------------------------
