rename FlickrExport as Flickr to be more generic

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ AcquireImages      : A tool to acquire images using flat scanner.
 Calendar           : A tool to create calendars.
 DngConverter       : A tool to convert Raw Image to Digital NeGative (DNG - http://en.wikipedia.org/wiki/Digital_Negative_(file_format)).
 Facebook           : A tool to import/export images to/from a remote Facebook web service (http://www.facebook.com).
-FlickrExport       : A tool to export images to a remote Flickr based web service (http://www.flickr.com). Also compatible with Zooomr and 23HQ 
+Flickr             : A tool to export images to a remote Flickr based web service (http://www.flickr.com). Also compatible with Zooomr and 23HQ 
 Geolocator         : A tool to geolocalize pictures.
 HTMLExport         : A tool to export images collections into a static XHTML page.
 ImageViewer        : A tool to preview images using OpenGL.
